--- a/css/color.css
+++ b/css/color.css
@@ -3,3 +3,14 @@ cl-
 bg-cl-
 */
 
+.cl-gray {
+    color: #999;
+}
+
+.cl-black {
+    color: #000
+}
+
+.bg-cl-gray-light {
+    background-color: #f6f6f6;
+}
