--- a/css/layout.css
+++ b/css/layout.css
@@ -1,25 +1,121 @@
-footer {
-    height: 379px;
-    margin-top:30px;
-
-}
-.footer-product{
-    height: 179px;
-    border-bottom: 1px #eeeeee solid;
-    border-top: 1px #eeeeee solid;
-    background-color: #ffffff;
+.top-menu {
+    color: #999;
+    line-height: 2.5em;
+    border-bottom: 1px #ccc solid;
 }
 
-.footer-about{
-    color: #666666;
-    text-align: center;
-    height: 179px;
-    border-right: 1px #eeeeee solid;
-    padding-top: 10px;
+.top-menu a {
+    margin-left: 1em;
 }
-.footer-cop{
-    height: 170px;
-    background-color: #ffffff;
+
+.main-menu-wrap {
+    background-color: #fff;
+}
+
+.main-sub-menu {
+    padding: 10px 0;
+}
+
+.main-menu {
+
+}
+
+.main-menu a {
+    font-size: 1.4em;
+    color: #222;
+    margin-left: 1em;
+}
+
+.main-menu a.active{
+    color: #69ad19;
+    border-bottom: 2px #69ad19 solid;
+    padding-bottom: 0.3em;
+}
+
+.side-menu-1{
+    margin: 0;
+    padding: 0;
+    list-style: none;
     text-align: center;
-    padding-top: 30px;
+    margin-bottom: 30px;
+}
+
+.side-menu-1 a{
+    display: block;
+    font-size: 1.2em;
+    line-height: 2.5em;
+    border-bottom: 1px #eee solid;
+}
+
+.side-menu-1 a:hover{
+    background-color: #fbfbfb;
+}
+
+.side-menu-1 .header{
+    background-color: #69ad19;
+    color: #fff;
+    font-size: 1.5em;
+    text-align: left;
+    padding: 0.5em 1.5em;
+}
+
+.article{
+    margin: 20px;
+}
+
+.article .article-header{
+    text-align: center;
+    border-bottom: 1px #ddd solid;
+    padding-bottom: 20px;
+}
+
+.article h1{
+    font-size: 2em;
+    line-height: 2.5em;
+}
+
+.article .title-span span{
+    color: #aaa;
+    margin: 0 0.5em;
+}
+
+.article .article-body{
+    margin: 20px 0;
+}
+
+.article .article-body p{
+    text-indent: 2em;
+    line-height: 2em;
+    font-size: 1.2em;
+}
+
+.map-list{
+    margin: 0 auto;
+    display: block;
+    width: 90px;
+    list-style: none;
+}
+
+.map-list-right{
+    margin: 0 auto;
+    display: block;
+    list-style: none;
+    margin-left: 20px;
+    margin-right: 0;
+}
+
+.map-list-right dt{
+    color: #69ad19;
+    font-weight: 900;
+}
+
+.map-list-right dd{
+    margin-left: 0;
+    margin-right: 0;
+    white-space: nowrap;
+}
+
+.map-list a{
+    display: block;
+    line-height: 2em;
 }
