--- a/css/color.css
+++ b/css/color.css
@@ -11,7 +11,18 @@ bg-cl-
     color: #000
 }
 
+.cl-blue-light {
+    color: #3692d2;
+}
+
+.bg-cl-white {
+    background-color: #fff;
+}
+
 .bg-cl-gray-light {
     background-color: #f6f6f6;
 }
-.cl-red{ color: #ff0000}
+
+.cl-red {
+    color: #ff0000
+}
