--- a/css/form.css
+++ b/css/form.css
@@ -5,11 +5,19 @@
 
 .fm-row label{
     text-align: right;
+    /*margin-right: 0.5em 0 0.5em ;*/
+    padding-right: 0.5em;
+    margin-right: 0;
+    line-height: 3em;
+    font-size: 1.2em;
+    font-weight: 300;
+    color: #666;
 }
 
 .fm-row input
 {
-    line-height: 2em;
+    /*line-height: 2em;*/
+    padding: 0.5em 0.3em;
 }
 
 .fm-row .err{
