--- a/css/color.css
+++ b/css/color.css
@@ -11,6 +11,10 @@ bg-cl-
     color: #000
 }
 
+.cl-red {
+    color: #ff0000
+}
+
 .cl-blue-light {
     color: #3692d2;
 }
@@ -19,8 +23,8 @@ bg-cl-
     background-color: #fff;
 }
 
-.cl-red {
-    color: #ff0000
+.bg-cl-gray{
+    background-color: #dbdbdb;
 }
 
 .bg-cl-gray-light {
