--- a/css/layout.css
+++ b/css/layout.css
@@ -251,7 +251,7 @@ select{
 }
 .xiangqing-jiage{
     font-size: 1.6em;
-    font-family: 微软雅黑;
+    font-family: "微软雅黑";
     padding:5px 10px;
 }
 .xiangqing-buy{
