--- a/css/layout.css
+++ b/css/layout.css
@@ -320,15 +320,15 @@ select{
     padding-left: 20px;
 }
 
-.daohang ul{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
+/*.daohang ul{*/
+/*padding: 0;*/
+/*margin: 0;*/
+/*list-style: none;*/
+/*}*/
 
-.daohang ul li{
-    padding-left:20px;
-    line-height: 2em;
-    margin: 0;
-    font-size: 1.5em;
-}
+/*.daohang ul li{*/
+/*padding-left:20px;*/
+/*line-height: 2em;*/
+/*margin: 0;*/
+/*font-size: 1.5em;*/
+/*}*/
