--- a/css/base.css
+++ b/css/base.css
@@ -107,3 +107,19 @@ table.tab_css_1 td,table.tab_css_1 th{
 table.tab_css_1 tr.tr_css{
     background-color:#efefef;
 }
+
+.mail-peizhi-tr td{
+    border-bottom: 1px #e7e7e7 solid;
+}
+.mail-peizhi-td{
+    border-right: 1px #e7e7e7 solid;
+    background-color: #fafafa;
+    font-size: 1.3em;
+    color: #000;
+    font-weight: 900;
+    text-align: right;
+}
+.mail-peizhi-td1{
+    font-size: 1.2em;
+    text-align: left;
+}
