--- a/css/layout.css
+++ b/css/layout.css
@@ -48,8 +48,6 @@
     border-bottom: 1px #eee solid;
 }
 
-
-
 .side-menu-1 a:hover {
     background-color: #fbfbfb;
 }
@@ -58,7 +56,7 @@
     background-color: #69ad19;
     color: #fff;
     font-size: 1.5em;
-    text-align: left;
+    text-align: center;
     padding: 0.5em 1.5em;
 }
 
@@ -579,4 +577,31 @@ h1,h2.news-name-title{
 }
 .tr_css-td1{
     text-align: left;
+}
+
+.user-ziliao{
+    margin-bottom: 10px;
+    padding: 20px;
+
+}
+.user-ziliao h2{
+    font-size: 1.2em;
+    font-weight: 900;
+}
+.user-yuming{
+    border-top: 2px #68ad19 solid;
+
+}
+.user-yuming td{
+    height: 2em;
+    text-align: left;
+    padding-left: 10px;
+}
+.user-yuming th {
+    background-color: #f7f7f7;
+    text-align: left;
+    font-weight: 100;
+    font-size: 1.2em;
+    height: 2em;
+    padding-left: 10px;
 }
