--- a/css/layout.css
+++ b/css/layout.css
@@ -620,6 +620,10 @@ h1,h2.news-name-title{
 .user-ziliao-xiugai{
     margin-top: 50px;
 }
+
+.user-ziliao-xiugai1{
+    margin-top: 30px;
+}
 .dingdanchaxun{
     padding: 35px;
 }
@@ -637,4 +641,24 @@ h1,h2.news-name-title{
 .dingdan-chaxun{
     margin: 20px 0;
     text-align: center;
+}
+
+.shenqing-daili{
+    margin: 40px 0;
+}
+.user-ziliao-xiugai1 textarea{
+    height: 100px;
+}
+
+.daili-zige{
+    margin-top: 30px;
+}
+.daili-zige ul{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.daili-zige ul li{
+    line-height: 2em;
+    font-size: 1.2em;
 }
