在线帮助页面

--- a/css/icon.css
+++ b/css/icon.css
@@ -39,3 +39,28 @@
 .icon-sousuo{
     background-image:url(icon/sousuo.gif);
 }
+.icon-help-content{
+    background-image:url(icon/icon-help.jpg);
+}
+
+.icon-help-content1{
+    background-image:url(icon/icon-help1.jpg);
+}
+.icon-help-content2{
+    background-image:url(icon/icon-help2.jpg);
+}
+.icon-help-content3{
+    background-image:url(icon/icon-help3.jpg);
+}
+.icon-help-content4{
+    background-image:url(icon/icon-help4.jpg);
+}
+.icon-help-content5{
+    background-image:url(icon/icon-help5.jpg);
+}
+.icon-help-content6{
+    background-image:url(icon/icon-help6.jpg);
+}
+.icon-help-content7{
+    background-image:url(icon/icon-help7.jpg);
+}
