--- a/css/layout.css
+++ b/css/layout.css
@@ -774,6 +774,7 @@ h1,h2.news-name-title{
 .xiugai{
     font-size: 2.4em;
     padding-left: 60px;
+    line-height: 2em;
 
 }
 .xiugai1{
@@ -798,4 +799,27 @@ h1,h2.news-name-title{
 }
 .zhuce .header{
     font-size: 1.2em;
+}
+.gouwuche{
+    margin-top: 15px;
+}
+.gouwuche h2{
+    font-size: 1.2em;
+    margin: 0;
+    padding: 0;
+    font-weight: 900;
+}
+
+.gouwuche1{
+    background-color: #f4f4f4;
+    text-align: center;
+    padding: 5px;
+}
+.gouwuche2{
+    font-size: 1.3em;
+}
+.user-dingdan-xiugai1{
+    margin-top: 30px;
+    text-align: right;
+    line-height: 3em;
 }
