--- a/css/icon.css
+++ b/css/icon.css
@@ -74,3 +74,12 @@
 .icon-ok{
     background-image:url(icon/icon-ok.jpg);
 }
+.icon-no{
+    background-image:url(icon/icon-no.jpg);
+}
+.icon-jinggao{
+    background-image:url(icon/icon-jinggao.jpg);
+}
+.icon-tishi{
+    background-image:url(icon/tishi.jpg);
+}
