--- a/css/layout.css
+++ b/css/layout.css
@@ -164,10 +164,11 @@
 }
 .e-chaxun{
     background-color: #dbdbdb;
-    padding: 10px 20px 3px 20px;
+    padding: 10px 20px;
     font-size: 1.2em;
     font-weight: 900;
     color: #000;
+
 }
 
 .c-chaxun{
@@ -280,11 +281,13 @@ select{
     list-style: none;
     line-height: 2em;
 }
-.xiangqing-jiage{
+.xiangqing-shuoming select{
+    border: 1px #ccc solid;
     font-size: 1.6em;
     font-family: "微软雅黑";
     padding:5px 10px;
 }
+
 .xiangqing-buy{
     margin-top: 13px;
 }
@@ -300,9 +303,12 @@ select{
     list-style: none;
     font-size: 1.5em;
     margin: 0;
-    line-height: 2em;
 }
-
+.product-name ul li{
+    line-height: 2em;
+    margin: 0;
+    padding: 0;
+}
 .product-border{
    border: 1px #e6e6e6 solid;
     padding-bottom: 20px;
@@ -360,7 +366,6 @@ h1,h2.news-name-title{
 
 }
 
-
 .news-body{
     margin-top: 1em;
 }
@@ -368,7 +373,6 @@ h1,h2.news-name-title{
     padding: 0;
     margin: 0;
     list-style: none;
-
 }
 .news-body ul li{
     line-height: 2.3em;
@@ -573,6 +577,7 @@ h1,h2.news-name-title{
 .product-shuoming select{
     padding: 0;
     margin: 0;
+    border: 1px #ccc solid;
 }
 .tr_css-td{
     color: #000;
