--- a/css/layout.css
+++ b/css/layout.css
@@ -808,6 +808,11 @@ h1,h2.news-name-title{
     margin-bottom: 30px;
     padding: 30px 0;
 }
+
+.user-yanzheng1{
+    margin-bottom: 30px;
+
+}
 .xiugai{
     font-size: 2.4em;
     padding-left: 60px;
